# srat

./: .clang-tidy  .gitignore  .gitmodules  .ignore  CMakeLists.txt  Makefile  ROADMAP.md  SKILL.md  SKILLS.md  custom-vim.lua  generate-reference-images.py  imgui.ini
app/: batch-render.cpp  batch-render.hpp  cgltf.h  gui.cpp  gui.hpp  model-loader.cpp  model-loader.hpp  perf-suite.cpp  perf-suite.hpp  source.cpp  tinyobjloader.cpp  unit-test-alloc-arena.cpp  unit-test-alloc-virtual-range.cpp  unit-test-core-array.cpp  unit-test-core-handles.cpp  unit-test-core-math.cpp  unit-test-gfx-image.cpp  unit-test-handles.cpp  unit-test-math.cpp  unit-test-rasterizer-tile-grid.cpp  unit-test-rasterizer.cpp  unit-test-tile-grid.cpp  unit-test-virtual-block-allocator.cpp  unit-tests.cpp
srat/include/srat/: alloc-arena.hpp  alloc-virtual-range.hpp  arena-allocator.hpp  command-buffer.hpp  config.hpp  core-array.hpp  core-config.hpp  core-handle.hpp  core-handle.inl  core-math.hpp  core-types.hpp  deleteme-rasterizer-phase-bin.hpp  deleteme-rasterizer-tiled.hpp  deleteme-rasterizer.hpp  gfx-command-buffer.hpp  gfx-device.hpp  gfx-image.hpp  gfx-material.hpp  handle.hpp  handle.inl  image.hpp  material-core.hpp  material-fragment-pbr-metallic-roughness.hpp  material-fragment-unlit.hpp  math.hpp  profiler.hpp  rasterizer-binning.hpp  rasterizer-interpolant.hpp  rasterizer-phase-bin.hpp  rasterizer-phase-rasterize.hpp  rasterizer-phase-vertex.hpp  rasterizer-rasterize.hpp  rasterizer-reference.hpp  rasterizer-stage-vertex.hpp  rasterizer-tile-grid.hpp  rasterizer-tiled.hpp  rasterizer.hpp  tile-grid.hpp  types.hpp  virtual-range-allocator.hpp
srat/src/: alloc-virtual-range.cpp  command-buffer.cpp  core-config.cpp  deleteme-rasterizer-deleteme-bin.cpp  deleteme-rasterizer-tiled.cpp  gfx-command-buffer.cpp  gfx-device.cpp  gfx-image.cpp  image.cpp  internal-gfx-device.hpp  profiler.cpp  rasterizer-binning.cpp  rasterizer-phase-bin.cpp  rasterizer-phase-rasterize.cpp  rasterizer-phase-vertex.cpp  rasterizer-rasterize.cpp  rasterizer-reference.cpp  rasterizer-stage-vertex.cpp  rasterizer-tile-grid.cpp  rasterizer-tiled.cpp  rasterizer.cpp  tile-grid.cpp  virtual-range-allocator.cpp
srat/src/internal/: gfx-device.hpp  gfx-material-impl.cpp  gfx-material-impl.hpp
